--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -73,7 +73,7 @@
 <ul><li><b>Zaji&scaron;t&#283;n&iacute; pevnosti va&scaron;ich objekt&#367;</b>: Stejn&#283; jako objekty v re&aacute;ln&eacute;m sv&#283;t&#283; mus&iacute; b&yacute;t i va&scaron;e 3D modely pevn&eacute;. FreeCAD, zejm&eacute;na v r&aacute;mci pracovn&iacute;ho prost&#345;ed&iacute; PartDesign, v&aacute;m pom&aacute;h&aacute; zajistit, aby va&scaron;e modely z&#367;staly pevn&eacute; b&#283;hem cel&eacute;ho procesu navrhov&aacute;n&iacute;. Software v&aacute;s upozorn&iacute;, pokud n&#283;jak&aacute; operace ohro&#382;uje pevnost objektu. Pracovn&iacute; prost&#345;ed&iacute; Part nav&iacute;c nab&iacute;z&iacute; n&aacute;stroj <span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Kontrola geometrie</a>, kter&yacute; v&aacute;m umo&#382;&#328;uje identifikovat potenci&aacute;ln&iacute; vady nebo probl&eacute;my, kter&eacute; by mohly naru&scaron;it proces 3D tisku.</li></ul>
 <ul><li><b>Ov&#283;&#345;en&iacute; spr&aacute;vnosti rozm&#283;r&#367;</b>: P&#345;esnost je z&aacute;sadn&iacute; &ndash; to, co navrhnete ve FreeCADu, se p&#345;&iacute;mo prom&iacute;tne do re&aacute;ln&yacute;ch rozm&#283;r&#367;. Milimetr ve FreeCADu je milimetr ve fyzick&eacute;m objektu, tak&#382;e ka&#382;d&yacute; rozm&#283;r mus&iacute; b&yacute;t pe&#269;liv&#283; zv&aacute;&#382;en a ov&#283;&#345;en, aby byla zaji&scaron;t&#283;na p&#345;esnost.</li></ul>
 <ul><li><b>Spr&aacute;va degradace</b>: Je d&#367;le&#382;it&eacute; si uv&#283;domit, &#382;e &#382;&aacute;dn&aacute; 3D tisk&aacute;rna ani CNC fr&eacute;zka nedok&aacute;&#382;e p&#345;&iacute;mo zpracovat soubory FreeCADu. Tyto stroje pou&#382;&iacute;vaj&iacute; G-k&oacute;d, strojov&yacute; jazyk s r&#367;zn&yacute;mi dialekty v z&aacute;vislosti na stroji nebo dodavateli. Proces p&#345;evodu va&scaron;eho modelu do G-k&oacute;du lze &#269;asto prov&eacute;st automaticky pomoc&iacute; softwaru pro &#345;ez&aacute;n&iacute;, ale m&aacute;te tak&eacute; mo&#382;nost prov&eacute;st jej slicov&aacute;n&iacute;, abyste z&iacute;skali v&#283;t&scaron;&iacute; kontrolu. B&#283;hem tohoto p&#345;evodu je v&scaron;ak nevyhnuteln&aacute; ur&#269;it&aacute; ztr&aacute;ta detail&#367; nebo kvality, zejm&eacute;na p&#345;i p&#345;evodu modelu do form&aacute;tu s&iacute;t&#283; pro tisk. Mus&iacute;te zajistit, aby toto zhor&scaron;en&iacute; z&#367;stalo v p&#345;ijateln&yacute;ch mez&iacute;ch a nem&#283;lo vliv na funk&#269;nost nebo vzhled va&scaron;eho kone&#269;n&eacute;ho objektu.</li></ul>
-<ul><li><b>Export Format Compatibility</b>: For 3D printing, STL is the most commonly used format, but it inherently converts your model into a mesh of triangles, which can result in some loss of detail. It&rsquo;s essential to choose the right resolution when exporting to STL, balancing between detail retention and file size. Similarly, for CNC machining, formats like STEP or IGES are preferable as they maintain the original geometric integrity of the design better than STL. Choosing the right format ensures that the conversion to G-Code remains accurate.</li></ul>
+<ul><li><b>Kompatibilita form&aacute;t&#367; exportu</b>: Pro 3D tisk je nej&#269;ast&#283;ji pou&#382;&iacute;van&yacute;m form&aacute;tem STL, ale ten v&aacute;&scaron; model automaticky p&#345;ev&aacute;d&iacute; na s&iacute;&#357; troj&uacute;heln&iacute;k&#367;, co&#382; m&#367;&#382;e v&eacute;st ke ztr&aacute;t&#283; n&#283;kter&yacute;ch detail&#367;. P&#345;i exportu do form&aacute;tu STL je d&#367;le&#382;it&eacute; zvolit spr&aacute;vn&eacute; rozli&scaron;en&iacute; a naj&iacute;t rovnov&aacute;hu mezi zachov&aacute;n&iacute;m detail&#367; a velikost&iacute; souboru. Podobn&#283; pro CNC obr&aacute;b&#283;n&iacute; jsou vhodn&#283;j&scaron;&iacute; form&aacute;ty jako STEP nebo IGES, proto&#382;e l&eacute;pe zachov&aacute;vaj&iacute; p&#367;vodn&iacute; geometrickou integritu n&aacute;vrhu ne&#382; form&aacute;t STL. V&yacute;b&#283;r spr&aacute;vn&eacute;ho form&aacute;tu zaji&scaron;&#357;uje, &#382;e p&#345;evod do G-k&oacute;du z&#367;stane p&#345;esn&yacute;.</li></ul>
 <ul><li><b>Mesh Analysis and Calibration</b>: Before exporting your model to a slicer or CNC toolpath generator, it&rsquo;s advisable to run a mesh analysis using FreeCAD&rsquo;s <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> to detect irregularities, non-manifold edges, or other mesh issues that might complicate the manufacturing process. Additionally, even with a perfect model, make sure your 3D printer or CNC machine is properly calibrated (e.g., for bed leveling, stepper motor settings, or extruder configuration) to avoid quality problems in the final product.</li></ul>
 <p>In the following sections, we'll assume that you've already taken care of creating solid models with the correct dimensions. Our focus will now shift to managing the conversion process to G-Code, ensuring that your model maintains the necessary quality for 3D printing or CNC machining. By addressing these considerations, you'll be better equipped to produce successful physical objects directly from your FreeCAD models.
 </p>
@@ -175,12 +175,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112125924
+Cached time: 20260112130024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.143 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.137 seconds
 Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -191,13 +191,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.603      1 -total
- 70.19%    8.144      1 Template:Manual:TOC
- 50.49%    5.858      1 Manual:Summary/cs
- 26.01%    3.018      2 Template:Docnav
+100.00%    9.565      1 -total
+ 71.01%    6.792      1 Template:Manual:TOC
+ 55.92%    5.349      1 Manual:Summary/cs
+ 25.19%    2.409      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112125924 and revision id 1737489. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112130023 and revision id 1737491. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
