--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -76,9 +76,10 @@
 <ul><li><b>Kompatibilita form&aacute;t&#367; exportu</b>: Pro 3D tisk je nej&#269;ast&#283;ji pou&#382;&iacute;van&yacute;m form&aacute;tem STL, ale ten v&aacute;&scaron; model automaticky p&#345;ev&aacute;d&iacute; na s&iacute;&#357; troj&uacute;heln&iacute;k&#367;, co&#382; m&#367;&#382;e v&eacute;st ke ztr&aacute;t&#283; n&#283;kter&yacute;ch detail&#367;. P&#345;i exportu do form&aacute;tu STL je d&#367;le&#382;it&eacute; zvolit spr&aacute;vn&eacute; rozli&scaron;en&iacute; a naj&iacute;t rovnov&aacute;hu mezi zachov&aacute;n&iacute;m detail&#367; a velikost&iacute; souboru. Podobn&#283; pro CNC obr&aacute;b&#283;n&iacute; jsou vhodn&#283;j&scaron;&iacute; form&aacute;ty jako STEP nebo IGES, proto&#382;e l&eacute;pe zachov&aacute;vaj&iacute; p&#367;vodn&iacute; geometrickou integritu n&aacute;vrhu ne&#382; form&aacute;t STL. V&yacute;b&#283;r spr&aacute;vn&eacute;ho form&aacute;tu zaji&scaron;&#357;uje, &#382;e p&#345;evod do G-k&oacute;du z&#367;stane p&#345;esn&yacute;.</li></ul>
 <ul><li><b>Anal&yacute;za a kalibrace s&iacute;t&#283;</b>: P&#345;ed exportem modelu do sliceru nebo gener&aacute;toru CNC n&aacute;strojov&eacute; dr&aacute;hy je vhodn&eacute; prov&eacute;st anal&yacute;zu s&iacute;t&#283; pomoc&iacute; n&aacute;stroje <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> v programu FreeCAD, aby se odhalily nepravidelnosti, ne-manifoldov&eacute; hrany nebo jin&eacute; probl&eacute;my s&iacute;t&#283;, kter&eacute; by mohly zkomplikovat v&yacute;robn&iacute; proces. Nav&iacute;c, i kdy&#382; m&aacute;te dokonal&yacute; model, ujist&#283;te se, &#382;e je va&scaron;e 3D tisk&aacute;rna nebo CNC stroj spr&aacute;vn&#283; kalibrov&aacute;n (nap&#345;. pokud jde o vyrovn&aacute;n&iacute; podlo&#382;ky, nastaven&iacute; krokov&eacute;ho motoru nebo konfiguraci extruderu), aby se p&#345;ede&scaron;lo probl&eacute;m&#367;m s kvalitou fin&aacute;ln&iacute;ho produktu.</li></ul>
 <p>V n&aacute;sleduj&iacute;c&iacute;ch odstavc&iacute;ch budeme p&#345;edpokl&aacute;dat, &#382;e jste ji&#382; vytvo&#345;ili pevn&eacute; modely se spr&aacute;vn&yacute;mi rozm&#283;ry. Nyn&iacute; se zam&#283;&#345;&iacute;me na &#345;&iacute;zen&iacute; procesu p&#345;evodu do G-k&oacute;du, aby v&aacute;&scaron; model zachoval kvalitu pot&#345;ebnou pro 3D tisk nebo CNC obr&aacute;b&#283;n&iacute;. Pokud se budete &#345;&iacute;dit t&#283;mito pokyny, budete l&eacute;pe p&#345;ipraveni na v&yacute;robu fyzick&yacute;ch objekt&#367; p&#345;&iacute;mo z va&scaron;ich model&#367; vytvo&#345;en&yacute;ch ve FreeCADu
+</p><p><span id="Exporting_to_slicers"></span>
 </p>
 <meta property="mw:PageProp/toc">
-<h3><span class="mw-headline" id="Exporting_to_slicers">Exporting to slicers</span></h3>
+<h3><span id="Export_do_slicer.C5.AF"></span><span class="mw-headline" id="Export_do_slicer&#367;">Export do slicer&#367;</span></h3>
 <p>The most common technique for preparing a 3D model for printing involves exporting the 3D object from FreeCAD to a specialized software known as a slicer. The slicer generates G-code by slicing the model into thin layers, which the 3D printer will follow to build the object layer by layer. Because many 3D printers&mdash;especially home-built or hobbyist models&mdash;have unique configurations, slicer programs provide a wide range of advanced settings. These settings allow you to customize key parameters, such as layer height, print speed, infill density, and support structures, ensuring the G-code is tailored to the specific features and capabilities of your printer.
 </p><p>Many slicers also offer simulation and print validation features that are invaluable for previewing the print process. You can visualize the toolpath for each layer, which helps detect potential issues like overhangs that may require supports or areas where cooling might be insufficient. This pre-print validation ensures your model is properly prepared before the print begins, avoiding failed prints or wasted material.
 </p><p>Slicers often include additional insights, such as estimating print time, material usage, and cost based on the filament or resin being used. This allows you to make informed decisions about the printing process and tweak settings for efficiency or material conservation. Although the deeper intricacies of 3D printing&mdash;such as machine calibration, material selection, and post-processing&mdash;are beyond the scope of this guide, we will focus on how to properly export your FreeCAD model and use slicer software to ensure the output is correct and optimized for your specific printer
@@ -175,13 +176,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112130915
+Cached time: 20260112130940
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 121/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
 Highest expansion depth: 5/100
@@ -191,13 +192,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.450      1 -total
- 70.24%    7.340      1 Template:Manual:TOC
- 55.68%    5.818      1 Manual:Summary/cs
- 25.48%    2.663      2 Template:Docnav
+100.00%    9.349      1 -total
+ 73.87%    6.906      1 Template:Manual:TOC
+ 48.71%    4.554      1 Manual:Summary/cs
+ 22.05%    2.062      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112130915 and revision id 1737495. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112130940 and revision id 1737497. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
