--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -81,7 +81,7 @@
 <meta property="mw:PageProp/toc">
 <h3><span id="Export_do_slicer.C5.AF"></span><span class="mw-headline" id="Export_do_slicer&#367;">Export do slicer&#367;</span></h3>
 <p>Nejb&#283;&#382;n&#283;j&scaron;&iacute; technikou p&#345;&iacute;pravy 3D modelu pro tisk je export 3D objektu z FreeCADu do specializovan&eacute;ho softwaru zn&aacute;m&eacute;ho jako slicer. Slicer generuje G-k&oacute;d roz&#345;ez&aacute;n&iacute;m modelu na tenk&eacute; vrstvy, kter&eacute; 3D tisk&aacute;rna n&aacute;sleduje, aby objekt vytvo&#345;ila vrstvu po vrstv&#283;. Proto&#382;e mnoho 3D tisk&aacute;ren &ndash; zejm&eacute;na dom&aacute;c&iacute; nebo hobby modely &ndash; m&aacute; jedine&#269;n&eacute; konfigurace, programy slicer&#367; poskytuj&iacute; &scaron;irokou &scaron;k&aacute;lu pokro&#269;il&yacute;ch nastaven&iacute;. Tato nastaven&iacute; v&aacute;m umo&#382;&#328;uj&iacute; p&#345;izp&#367;sobit kl&iacute;&#269;ov&eacute; parametry, jako je v&yacute;&scaron;ka vrstvy, rychlost tisku, hustota v&yacute;pln&#283; a podp&#367;rn&eacute; struktury, a zajistit tak, &#382;e G-k&oacute;d bude p&#345;izp&#367;soben specifick&yacute;m vlastnostem a schopnostem va&scaron;&iacute; tisk&aacute;rny.
-</p><p>Many slicers also offer simulation and print validation features that are invaluable for previewing the print process. You can visualize the toolpath for each layer, which helps detect potential issues like overhangs that may require supports or areas where cooling might be insufficient. This pre-print validation ensures your model is properly prepared before the print begins, avoiding failed prints or wasted material.
+</p><p>Mnoho slicer&#367; tak&eacute; nab&iacute;z&iacute; funkce simulace a ov&#283;&#345;en&iacute; tisku, kter&eacute; jsou neoceniteln&eacute; pro n&aacute;hled tiskov&eacute;ho procesu. M&#367;&#382;ete vizualizovat dr&aacute;hu n&aacute;stroje pro ka&#382;dou vrstvu, co&#382; pom&aacute;h&aacute; odhalit potenci&aacute;ln&iacute; probl&eacute;my, jako jsou p&#345;evisy, kter&eacute; mohou vy&#382;adovat podpory nebo oblasti, kde m&#367;&#382;e b&yacute;t nedostate&#269;n&eacute; chlazen&iacute;. Toto ov&#283;&#345;en&iacute; p&#345;ed tiskem zaji&scaron;&#357;uje, &#382;e je v&aacute;&scaron; model p&#345;ed zah&aacute;jen&iacute;m tisku spr&aacute;vn&#283; p&#345;ipraven, &#269;&iacute;m&#382; se zabr&aacute;n&iacute; ne&uacute;sp&#283;&scaron;n&yacute;m tisk&#367;m nebo pl&yacute;tv&aacute;n&iacute; materi&aacute;lem.
 </p><p>Slicers often include additional insights, such as estimating print time, material usage, and cost based on the filament or resin being used. This allows you to make informed decisions about the printing process and tweak settings for efficiency or material conservation. Although the deeper intricacies of 3D printing&mdash;such as machine calibration, material selection, and post-processing&mdash;are beyond the scope of this guide, we will focus on how to properly export your FreeCAD model and use slicer software to ensure the output is correct and optimized for your specific printer
 </p>
 <h3><span class="mw-headline" id="Converting_objects_to_meshes">Converting objects to meshes</span></h3>
@@ -176,12 +176,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112131007
+Cached time: 20260112131024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.202 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.158 seconds
 Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -192,13 +192,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.006      1 -total
- 72.70%    8.001      1 Template:Manual:TOC
- 57.70%    6.350      1 Manual:Summary/cs
- 22.65%    2.493      2 Template:Docnav
+100.00%    8.405      1 -total
+ 69.79%    5.866      1 Template:Manual:TOC
+ 52.89%    4.445      1 Manual:Summary/cs
+ 25.76%    2.165      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112131007 and revision id 1737499. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112131024 and revision id 1737501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
