--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -87,7 +87,7 @@
 </p>
 <h3><span id="Konverze_objekt.C5.AF_na_s.C3.ADt.C4.9B"></span><span class="mw-headline" id="Konverze_objekt&#367;_na_s&iacute;t&#283;">Konverze objekt&#367; na s&iacute;t&#283;</span></h3>
 <p>&#381;&aacute;dn&yacute; ze sou&#269;asn&yacute;ch slicer&#367; nedok&aacute;&#382;e p&#345;&iacute;mo p&#345;ijmout geometrii t&#283;les vytvo&#345;enou ve FreeCADu. Slicery jako Cura a PrusaSlicer pracuj&iacute; s form&aacute;ty zalo&#382;en&yacute;mi na<a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polygon_mesh">s&iacute;ti</a>, jako jsou STL, OBJ nebo 3MF, kter&eacute; p&#345;edstavuj&iacute; geometrii povrchu objektu pomoc&iacute; s&iacute;t&#283; troj&uacute;heln&iacute;k&#367;. Proto, aby bylo mo&#382;n&eacute; pou&#382;&iacute;t model vytvo&#345;en&yacute; ve FreeCADu, mus&iacute; b&yacute;t nejprve p&#345;eveden do form&aacute;tu s&iacute;t&#283;, kter&yacute; tyto slicery dok&aacute;&#382;ou interpretovat.
-</p><p>The most commonly used format for 3D printing is STL. One reason STL is preferred is its simplicity&mdash;it represents the 3D geometry as a mesh of triangles without including complex details like colors, materials, or textures. This minimalistic approach ensures that STL files are lightweight and compatible with virtually all slicers and 3D printers, making it the industry standard. While OBJ and 3MF are also supported, they can carry additional information like textures and materials, which is unnecessary for most 3D printing tasks and can complicate the slicing process.
+</p><p>Nej&#269;ast&#283;ji pou&#382;&iacute;van&yacute;m form&aacute;tem pro 3D tisk je STL. Jedn&iacute;m z d&#367;vod&#367;, pro&#269; je STL preferov&aacute;n, je jeho jednoduchost &ndash; p&#345;edstavuje 3D geometrii jako s&iacute;&#357; troj&uacute;heln&iacute;k&#367; bez zahrnut&iacute; slo&#382;it&yacute;ch detail&#367;, jako jsou barvy, materi&aacute;ly nebo textury. Tento minimalistick&yacute; p&#345;&iacute;stup zaji&scaron;&#357;uje, &#382;e soubory STL jsou lehk&eacute; a kompatibiln&iacute; s prakticky v&scaron;emi slicery a 3D tisk&aacute;rnami, co&#382; z n&#283;j &#269;in&iacute; pr&#367;myslov&yacute; standard. A&#269;koli jsou podporov&aacute;ny tak&eacute; form&aacute;ty OBJ a 3MF, mohou obsahovat dal&scaron;&iacute; informace, jako jsou textury a materi&aacute;ly, kter&eacute; jsou pro v&#283;t&scaron;inu &uacute;kol&#367; 3D tisku zbyte&#269;n&eacute; a mohou komplikovat proces slicov&aacute;n&iacute;.
 </p><p>Fortunately, converting a solid object to a mesh in FreeCAD is straightforward, even though converting a mesh back into a solid is a more complicated operation. During the conversion process, it is crucial to keep in mind that some degradation of the model&rsquo;s quality may occur, especially when reducing complex geometry to a simple triangular mesh. You must ensure that this degradation remains within acceptable limits to maintain the accuracy of your printed object.
 </p><p>In FreeCAD, the <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> handles all mesh-related tasks. This workbench contains tools not only for converting between Part and Mesh objects but also for analyzing and repairing meshes. While mesh manipulation isn&rsquo;t the primary focus of FreeCAD, it becomes essential when preparing models for 3D printing. Mesh objects are widely used in other applications, and the Mesh Workbench allows you to fully manage and adjust these objects, ensuring they are ready for the next step in the printing process.
 </p>
@@ -177,12 +177,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112131237
+Cached time: 20260112131257
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.128 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.132 seconds
 Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -193,13 +193,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.838      1 -total
- 72.39%    6.398      1 Template:Manual:TOC
- 49.75%    4.397      1 Manual:Summary/cs
- 24.28%    2.146      2 Template:Docnav
+100.00%   10.310      1 -total
+ 72.43%    7.468      1 Template:Manual:TOC
+ 55.54%    5.726      1 Manual:Summary/cs
+ 23.81%    2.455      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112131236 and revision id 1737507. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112131257 and revision id 1737509. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
