--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -263,9 +263,7 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.13.svg&amp;filetimestamp=20240106165243&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.13.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.13</b> UNC hexagon coupling nut.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.9A.svg&amp;filetimestamp=20230312162354&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.9A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.6.9A</b> Wing nut, type A.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.9A.svg&amp;filetimestamp=20230312162354&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.9A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.6.9A</b> Fl&uuml;gelmutter, Typ A.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN315.svg&amp;filetimestamp=20230312162446&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN315.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>DIN 315</b> Fl&uuml;gelmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN557.svg&amp;filetimestamp=20210815132125&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN557.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>DIN 557</b> Vierkantmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN562.svg&amp;filetimestamp=20210815132133&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN562.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>DIN 562</b> Vierkantmutter.</li></ul>
@@ -443,13 +441,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110135040
+Cached time: 20260112131535
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.426 seconds
-Real time usage: 0.576 seconds
-Preprocessor visited node count: 713/1000000
+CPU time usage: 0.467 seconds
+Real time usage: 0.769 seconds
+Preprocessor visited node count: 712/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -459,19 +457,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.425      1 -total
- 32.18%    7.217      1 Template:Fasteners_Tools_navi/de
- 21.18%    4.749      7 Template:PropertyData/de
- 10.22%    2.291      1 Template:Navigation_menu_2
-  9.73%    2.181      7 Template:Variable
-  7.77%    1.743      1 Template:TOCright
-  7.72%    1.732      2 Template:Caption
-  7.28%    1.632      1 Template:Button
-  6.41%    1.437      7 Template:MenuCommand
-  5.68%    1.274      1 Template:VersionPlus/de
+100.00%   50.672      1 -total
+ 32.89%   16.667      1 Template:Fasteners_Tools_navi/de
+ 22.34%   11.322      7 Template:PropertyData/de
+ 10.99%    5.570      7 Template:Variable
+ 10.87%    5.506      1 Template:Navigation_menu_2
+  9.38%    4.754      1 Template:VersionPlus/de
+  7.87%    3.988      7 Template:MenuCommand
+  7.46%    3.778      1 Template:TRUE
+  5.47%    2.771      1 Template:TOCright
+  5.42%    2.747      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260110135039 and revision id 1730766. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260112131534 and revision id 1737513. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
